--- a/graphula.cabal
+++ b/graphula.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ca3c9631f0eb250d085bf4e69cf99d4cd5d82c6c7975a14ce18b57fc549575c5
+-- hash: 291d8894b316043af232c0656dff34a1c9bdeb118863baa1bd0741edf1c56b8d
 
 name:           graphula
 version:        2.0.2.2
@@ -46,7 +46,7 @@ library
       Paths_graphula
   hs-source-dirs:
       src
-  ghc-options: -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude -Wno-missing-import-lists -Wno-safe -Wno-unsafe
+  ghc-options: -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude -Wno-missing-import-lists -Wno-safe -Wno-unsafe -Wno-missing-role-annotations
   build-depends:
       HUnit
     , QuickCheck
@@ -77,7 +77,7 @@ test-suite readme
       Paths_graphula
   hs-source-dirs:
       test
-  ghc-options: -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude -Wno-missing-import-lists -Wno-safe -Wno-unsafe -pgmL markdown-unlit
+  ghc-options: -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude -Wno-missing-import-lists -Wno-safe -Wno-unsafe -Wno-missing-role-annotations -pgmL markdown-unlit
   build-depends:
       QuickCheck
     , base <5
